k8s/ingress/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: main
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /$
            backend:
              serviceName: business-service
              servicePort: 8080
          - path: /business
            backend:
              serviceName: business-service
              servicePort: 8080
          - path: /time
            backend:
              serviceName: time-service
              servicePort: 8080
